<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/learning_icon"
            android:title="@string/nav_learning"/>
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/quiz_icon"
            android:title="@string/nav_quiz"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_icon"
            android:title="@string/nav_setting"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_icon"
            android:title="@string/nav_feedback"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/nav_about"/>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/logout_icon"
                android:title="@string/nav_log_out"/>
        </menu>
    </item>

</menu>
