<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="8dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/login_background"
        tools:context=".activity.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_title"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="15sp"
                android:textStyle="italic"
                android:padding="8dp"
                android:text="@string/forgot_pass_confirm"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:counterEnabled="true">

            <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:selectAllOnFocus="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:layout_gravity="center"
                android:id="@+id/btnReset"
                style="?android:textAppearanceSmall"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:text="@string/action_reset_password"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/shape"/>

    </LinearLayout>

    <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tv_back_login"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.965"/>

</android.support.constraint.ConstraintLayout>