<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_result"
        tools:context=".activity.ResultActivity">
    <LinearLayout

            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="300dp">
        <ImageView

                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/quiz_level_icon"/>
        <TextView
                android:id="@+id/tv_result"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/activity_vertical_margin"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/35"
                android:background="@drawable/shape_textview"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_failnoti"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_margin="@dimen/button_magin"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_totalTrue"
                    android:text="2/35"
                    android:textSize="@dimen/size_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_true"
            />


        </LinearLayout>
        <LinearLayout

                android:layout_margin="@dimen/button_magin"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_totalFail"
                    android:text="2/35"
                    android:textSize="@dimen/size_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_fail"
            />


        </LinearLayout>
        <LinearLayout
                android:layout_margin="@dimen/button_magin"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_totalDoNot"
                    android:text="2/35"
                    android:textSize="@dimen/size_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_do_not"
            />


        </LinearLayout>

    </LinearLayout>
    <Button
        android:text="@string/tv_detail"
        android:layout_gravity="center"
        android:id="@+id/btn_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>