<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:counterEnabled="true">

        <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:selectAllOnFocus="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal">

        <Button
                android:layout_gravity="center"
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:text="@string/action_reset_password"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"/>

        <Button
                android:layout_gravity="center"
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:text="@string/action_cancel"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>