<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <ScrollView
            android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_background"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp" android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher_round"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="8dp"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:counterEnabled="true">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:counterEnabled="true">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"/>

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_cb_remember"
                    android:id="@+id/cbRemember"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/tvForgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_forget_password"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp">

                <ImageView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:src="@drawable/facebook"/>

                <ImageView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:src="@drawable/google_plus"/>

                <ImageView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:src="@drawable/twitter"/>

            </LinearLayout>

            <Button
                android:layout_gravity="center"
                android:id="@+id/btnLogin"
                style="?android:textAppearanceSmall"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/shape"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"/>

        </LinearLayout>

    </ScrollView>

    <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/login_tv_register_new_account"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="18sp"/>

</LinearLayout>


