<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:weightSum="10"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView
            android:textSize="@dimen/size_answer"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_status_test"
            android:layout_width="match_parent"
            android:layout_height="0dp"
    />
    <LinearLayout
            android:gravity="center"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
                android:id="@+id/tv_totalChecked"
                android:textColor="@color/bluelight"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Đã làm: 2 câu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        />
        <TextView
                android:textColor="@color/redlight"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Số câu: 35 câu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        />

    </LinearLayout>
    <TextView
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/tv_click_view_test"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <ScrollView
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
        >
            <android.support.v7.widget.RecyclerView
                    android:background="@color/pink"
                    android:id="@+id/rev_result_test"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            />
        </ScrollView>

    <Button
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text="@string/tv_cancer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn_cancel"
    />
</LinearLayout>